force-app/main/default/objects/CAPSettings__c/CAPSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Customer Action Plan (Flow) settings</description>
    <label>CAP Settings</label>
</CustomObject>