force-app/main/default/objects/CAPSettings__c/fields/ActivateCAP__c.field-meta.xml
<CustomField>
    <fullName>ActivateCAP__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this box shows accept/reject screen as well as CAP content screens and successor screens if active.</description>
    <inlineHelpText>Unchecking this box will hide accept/reject screen, CAP content screens, and successor screen.</inlineHelpText>
    <label>Activate CAP</label>
    <type>Checkbox</type>
</CustomField>