force-app/main/default/objects/CAPSettings__c/fields/ActivateSuccessorScreen1__c.field-meta.xml
<CustomField>
    <fullName>ActivateSuccessorScreen1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box will show successor screen 1.</description>
    <inlineHelpText>Unchecking this box will hide successor screen 1 (Feedback).</inlineHelpText>
    <label>Activate Successor Screen 1</label>
    <type>Checkbox</type>
</CustomField>