force-app/main/default/objects/CAPSettings__c/fields/Level4Name__c.field-meta.xml
<CustomField>
    <fullName>Level4Name__c</fullName>
    <defaultValue>&apos;Level4&apos;</defaultValue>
    <description>Name of CAP_Level__c.Level__c index #4. CAP Level (Level) Name is required and cannot contain semi-colons or commas.</description>
    <inlineHelpText>Name of CAP_Level__c.Level__c index #4. CAP Level (Level) Name is required and cannot contain semi-colons or commas.</inlineHelpText>
    <label>Level4 Name</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>