force-app/main/default/objects/CAPSettings__c/listViews/All_CAP_Settings.listView-meta.xml
<ListView>
    <fullName>All_CAP_Settings</fullName>
    <columns>NAME</columns>
    <columns>ActivateCAP__c</columns>
    <columns>ActivateCAPContent__c</columns>
    <columns>ActivateSuccessorScreen1__c</columns>
    <columns>ActivateSuccessorScreen2__c</columns>
    <columns>Level0Name__c</columns>
    <columns>Level1Name__c</columns>
    <columns>Level2Name__c</columns>
    <columns>Level3Name__c</columns>
    <columns>Level4Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All CAP Settings</label>
    <language>en_US</language>
</ListView>